--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -10,22 +10,22 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "server": "*",
     "ui": "*"
   },
   "devDependencies": {
-    "@types/node": "^17.0.0",
-    "@types/react": "^17.0.37",
-    "autoprefixer": "^10.4.0",
+    "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.2",
     "config": "*",
-    "eslint": "^8.5.0",
+    "eslint": "^8.7.0",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0",
+    "tailwindcss": "^3.0.15",
     "tsconfig": "*",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   }
 }
