--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
-    "esbuild": "^0.14.10",
+    "esbuild": "^0.14.13",
     "esbuild-jest": "^0.5.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.7",
     "jest-watch-typeahead": "^1.0.0",
-    "lint-staged": "^12.1.3",
-    "msw": "^0.36.3",
+    "lint-staged": "^12.3.1",
+    "msw": "^0.36.5",
     "prettier": "^2.5.1",
-    "turbo": "*"
+    "turbo": "1.0.28"
   },
   "turbo": {
     "pipeline": {
