--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,9 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "config": "*",
+    "tsconfig": "*",    
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.10",
-    "eslint": "^8.7.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
