--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "config": "*",
-    "tsconfig": "*",    
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.10",
+    "@types/node": "^17.0.12",
+    "config": "*",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "tsconfig": "*",
+    "typescript": "^4.5.5",
+    "eslint": "^8.7.0"
   },
   "dependencies": {
     "express": "^4.17.1"
