--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,8 +6,10 @@
   "files": [
     "eslint-next.js",
     "eslint-server.js",
+    "estlint-nest.js",
     "jest-next.js",
-    "jest-server.js"
+    "jest-server.js",
+    "jest-nest.js"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -18,6 +20,7 @@
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^26.0.0",
