--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -38,17 +38,12 @@
     "@types/jest": "27.4.0",
     "@types/node": "17.0.12",
     "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "5.10.1",
-    "@typescript-eslint/parser": "5.10.1",
-    "jest": "27.4.7",
-    "prettier": "2.5.1",
     "source-map-support": "0.5.21",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "tsconfig-paths": "3.12.0",
-    "typescript": "4.5.5",
-    "eslint": "^8.7.0"
+    "typescript": "4.5.5"
   }
 }
