--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,8 +19,7 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "tsconfig": "*",
-    "typescript": "^4.5.5",
-    "eslint": "^8.7.0"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "express": "^4.17.1"
