--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -11,20 +11,20 @@
   },
   "dependencies": {
     "next": "12.0.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "server": "*",
     "ui": "*"
   },
   "devDependencies": {
+    "@types/node": "17.0.12",
+    "@types/react": "17.0.38",
+    "autoprefixer": "10.4.2",
     "config": "*",
+    "next-transpile-modules": "9.0.0",
+    "postcss": "8.4.5",
+    "tailwindcss": "3.0.16",
     "tsconfig": "*",
-    "@types/node": "^17.0.12",
-    "@types/react": "^17.0.38",
-    "autoprefixer": "^10.4.2",
-    "next-transpile-modules": "^9.0.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.16",
-    "typescript": "^4.5.5"
+    "typescript": "4.5.5"
   }
 }
