--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,15 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.12",
+    "@types/express": "4.17.13",
+    "@types/node": "17.0.12",
     "config": "*",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
+    "nodemon": "2.0.15",
+    "ts-node": "10.4.0",
     "tsconfig": "*",
-    "typescript": "^4.5.5"
+    "typescript": "4.5.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "4.17.2"
   }
 }
