--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "esbuild": "^0.14.13",
-    "esbuild-jest": "^0.5.0",
-    "husky": "^7.0.4",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.7",
-    "jest-watch-typeahead": "^1.0.0",
-    "lint-staged": "^12.3.1",
-    "msw": "^0.36.7",
-    "prettier": "^2.5.1",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.4.0",
+    "esbuild": "0.14.13",
+    "esbuild-jest": "0.5.0",
+    "husky": "7.0.4",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "27.4.7",
+    "jest-watch-typeahead": "1.0.0",
+    "lint-staged": "12.3.1",
+    "msw": "0.36.7",
+    "prettier": "2.5.1",
     "turbo": "1.0.28"
   },
   "turbo": {
