--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,12 +5,12 @@
   "types": "./index.tsx",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.16",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "autoprefixer": "10.4.2",
+    "postcss": "8.4.5",
+    "tailwindcss": "3.0.16",
     "tsconfig": "*",
-    "typescript": "^4.5.5"
+    "typescript": "4.5.5"
   }
 }
