--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,9 +1,15 @@
 {
   "extends": "tsconfig/server.json",
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "./"
   },
-  "include": ["src/"],
-  "exclude": ["node_modules", ".turbo", "coverage", "dist", "src/**/*.test.ts"]
+  "exclude": [
+    "node_modules",
+    ".turbo",
+    "coverage",
+    "dist",
+    "src/**/*.test.ts",
+    "jest.config.js"
+  ]
 }
