--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,12 +4,5 @@
     "outDir": "dist",
     "baseUrl": "./"
   },
-  "exclude": [
-    "node_modules",
-    ".turbo",
-    "coverage",
-    "dist",
-    "src/**/*.test.ts",
-    "jest.config.js"
-  ]
+  "exclude": ["node_modules", ".turbo", "coverage", "dist"]
 }
