Playing with eslint rules

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "tsconfig/server.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "./dist",
     "baseUrl": "./"
   },
   "exclude": ["node_modules", ".turbo", "coverage", "dist"]
