--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "27.4.0",
-    "esbuild": "0.14.13",
+    "esbuild": "0.14.14",
     "esbuild-jest": "0.5.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
@@ -29,6 +29,7 @@
     "lint-staged": "12.3.1",
     "msw": "0.36.7",
     "prettier": "2.5.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "turbo": "1.0.28"
   },
   "turbo": {
