--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,12 @@
   "main": "./index.tsx",
   "types": "./index.tsx",
   "license": "MIT",
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
   "devDependencies": {
+    "config": "*",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "autoprefixer": "10.4.2",
