--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -19,11 +19,11 @@
   "devDependencies": {
     "@types/node": "17.0.12",
     "@types/react": "17.0.38",
-    "autoprefixer": "10.4.2",
+    "autoprefixer": "^10.4.2",
     "config": "*",
     "next-transpile-modules": "9.0.0",
-    "postcss": "8.4.5",
-    "tailwindcss": "3.0.16",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.16",
     "tsconfig": "*",
     "typescript": "4.5.5"
   }
