--- a/.github/root.yaml
+++ b/.github/root.yaml
@@ -2,7 +2,7 @@ name: root
 
 on:
   push:
-    branches: [main, part2Start-example]
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v2
