--- a/.github/server.yaml
+++ b/.github/server.yaml
@@ -2,7 +2,7 @@ name: 'server'
 
 on:
   push:
-    branches: [main, part2Start-example]
+    branches: [main]
     paths:
       - 'apps/server/**'
       - '.github/workflow/server.yaml'
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v2
