--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -12,24 +12,24 @@
     "@emotion/styled": "11.6.0",
     "@heroicons/react": "1.0.5",
     "@mui/icons-material": "5.3.1",
-    "@mui/material": "5.3.1",
+    "@mui/material": "5.4.0",
     "@next-auth/mongodb-adapter": "1.0.1",
     "@tailwindcss/line-clamp": "0.3.1",
+    "express": "4.17.2",
     "framer-motion": "6.2.3",
+    "lodash": "4.17.21",
     "mongodb": "4.3.1",
-    "next": "latest",
+    "next": "12.0.10",
     "next-auth": "4.1.2",
     "next-themes": "0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recoil": "0.5.2",
-    "timeago-react": "3.0.4",
-    "express": "4.17.2",
-    "lodash": "4.17.21"
+    "recoil": "0.6.1",
+    "timeago-react": "3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "10.4.2",
-    "postcss": "8.4.5",
+    "postcss": "8.4.6",
     "tailwindcss": "3.0.18"
   }
 }
