--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "files": [
+    "exlint-base.js",
     "eslint-next.js",
     "eslint-server.js",
     "estlint-nest.js",
@@ -22,6 +23,7 @@
     "eslint-plugin-jest": "26.0.0",
     "eslint-plugin-jest-dom": "4.0.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-testing-library": "5.0.5"
+    "eslint-plugin-testing-library": "5.0.5",
+    "eslint-plugin-promise": "6.0.0"
   }
 }
