--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "msw": "0.36.8",
     "prettier": "2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
     "turbo": "1.1.2"
   },
   "lint-staged": {
