--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "8.2.6",
     "@nestjs/core": "8.2.6",
     "@nestjs/platform-express": "8.2.6",
+    "@nestjs/serve-static": "^2.2.2",
     "@packages/nest-problem-details": "*",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "0.1.13",
