Added thunderclient with team option

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "esbenp.prettier-vscode",
     "bradlc.vscode-tailwindcss",
     "visualstudioexptteam.vscodeintellicode",
-    "vscode-icons-team.vscode-icons"
+    "vscode-icons-team.vscode-icons",
+    "rangav.vscode-thunder-client"
   ]
 }
