--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -28,6 +28,8 @@
     "@nestjs/serve-static": "^2.2.2",
     "@packages/nest-problem-details": "*",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cuid": "^2.1.8",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.2"
@@ -36,9 +38,10 @@
     "@nestjs/cli": "8.2.0",
     "@nestjs/schematics": "8.0.5",
     "@nestjs/testing": "8.2.6",
+    "@types/cuid": "^2.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
-    "@types/node": "17.0.14",
+    "@types/node": "17.0.15",
     "@types/supertest": "2.0.11",
     "config": "*",
     "source-map-support": "0.5.21",
