--- a/packages/nest-problem-details/tsconfig.build.json
+++ b/packages/nest-problem-details/tsconfig.build.json
@@ -1,4 +1,7 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "tsBuildInfoFile": "./dist/tsconfig.build.tsbuildinfo"
+  },
   "exclude": ["node_modules", "dist", "**/*spec.ts"]
 }
