--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -13,17 +13,17 @@
     "jest-nest.js"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
-    "eslint": "8.8.0",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
+    "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jest": "26.0.0",
+    "eslint-plugin-jest": "26.1.0",
     "eslint-plugin-jest-dom": "4.0.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-testing-library": "5.0.5",
-    "eslint-plugin-promise": "6.0.0"
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-testing-library": "5.0.5"
   }
 }
