--- a/packages/essentials/tsconfig.json
+++ b/packages/essentials/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "tsconfig/server.json",
   "compilerOptions": {
+    "rootDir": "./src",
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "composite": true
   }
 }
