--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@packages/nest-problem-details",
+  "name": "@packages/nest-essentials",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -16,10 +16,20 @@
     "@nestjs/core": "8.2.6",
     "@packages/essentials": "*",
     "class-validator": "0.13.2",
-    "lodash": "4.17.21",
+    "cls-hooked": "^4.2.2",
+    "config": "^3.3.7",
+    "lodash": "^4.17.21",
+    "nestjs-pino": "^2.5.0",
+    "pino-http": "^6.6.0",
+    "response-time": "^2.3.2",
     "type-fest": "2.11.2"
   },
   "devDependencies": {
+    "@nestjs/testing": "^8.2.6",
+    "@types/cls-hooked": "^4.3.3",
+    "@types/config": "^0.0.41",
+    "@types/lodash": "^4.14.178",
+    "@types/response-time": "^2.3.5",
     "config": "*",
     "tsconfig": "*"
   }
