--- a/packages/nest-problem-details/tsconfig.json
+++ b/packages/nest-problem-details/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "tsconfig/nestjs.json",
   "compilerOptions": {
+    "rootDir": "./src",
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "composite": true
   }
 }
