--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -30,7 +30,7 @@
     "@types/config": "^0.0.41",
     "@types/lodash": "^4.14.178",
     "@types/response-time": "^2.3.5",
-    "config": "*",
+    "dev-config": "*",
     "tsconfig": "*"
   }
 }
