--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -43,7 +43,7 @@
     "@types/jest": "27.4.0",
     "@types/node": "17.0.17",
     "@types/supertest": "2.0.11",
-    "config": "*",
+    "dev-config": "*",
     "source-map-support": "0.5.21",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
