--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -20,7 +20,7 @@
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
-    "config": "*",
+    "dev-config": "*",
     "next-transpile-modules": "9.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
