--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/node": "17.0.17",
-    "config": "*",
+    "dev-config": "*",
     "nodemon": "2.0.15",
     "ts-node": "10.5.0",
     "tsconfig": "*",
