--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,7 @@
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
     "autoprefixer": "10.4.2",
-    "config": "*",
+    "dev-config": "*",
     "postcss": "8.4.6",
     "tailwindcss": "3.0.22",
     "tsconfig": "*",
