--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -49,7 +49,7 @@
     "ts-jest": "27.1.3",
     "ts-loader": "9.2.6",
     "ts-node": "10.5.0",
-    "tsconfig": "*",
+    "dev-tsconfig": "*",
     "tsconfig-paths": "3.12.0",
     "typescript": "4.5.5"
   }
