--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -24,7 +24,7 @@
     "next-transpile-modules": "9.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
-    "tsconfig": "*",
+    "dev-tsconfig": "*",
     "typescript": "4.5.5"
   }
 }
