--- a/apps/next-linkedin-clone/tsconfig.json
+++ b/apps/next-linkedin-clone/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/nextjs.json",
+  "extends": "dev-tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
