--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,7 +18,7 @@
     "dev-config": "*",
     "nodemon": "2.0.15",
     "ts-node": "10.5.0",
-    "tsconfig": "*",
+    "dev-tsconfig": "*",
     "typescript": "4.5.5"
   },
   "dependencies": {
