--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -31,6 +31,6 @@
     "@types/lodash": "^4.14.178",
     "@types/response-time": "^2.3.5",
     "dev-config": "*",
-    "tsconfig": "*"
+    "dev-tsconfig": "*"
   }
 }
