--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest"
   },
   "devDependencies": {
+    "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "27.4.0",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash": "4.14.178",
+    "@types/node": "17.0.17",
     "esbuild": "0.14.21",
     "esbuild-jest": "0.5.0",
     "husky": "7.0.4",
@@ -31,11 +33,13 @@
     "lint-staged": "12.3.4",
     "msw": "0.36.8",
     "prettier": "2.5.1",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.5.0",
-    "turbo": "1.1.2"
+    "prettier-plugin-organize-imports": "2.3.4",
+    "ts-jest": "27.1.3",
+    "ts-loader": "9.2.6",
+    "ts-node": "10.5.0",
+    "turbo": "1.1.2",
+    "typescript": "4.5.5",
+    "webpack": "5.68.0"
   },
   "lint-staged": {
     "apps/**/*.{js,ts,jsx,tsx}": [
