--- a/apps/nest-server/tsconfig.json
+++ b/apps/nest-server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "dev-tsconfig/nestjs.json",
+  "extends": "dev-config/ts-nest.json",
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./"
