--- a/packages/essentials/package.json
+++ b/packages/essentials/package.json
@@ -16,7 +16,6 @@
     "type-fest": "2.12.0"
   },
   "devDependencies": {
-    "dev-config": "*",
-    "dev-tsconfig": "*"
+    "dev-config": "*"
   }
 }
