--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -30,7 +30,6 @@
     "@types/config": "0.0.41",
     "@types/lodash": "4.14.179",
     "@types/response-time": "2.3.5",
-    "dev-config": "*",
-    "dev-tsconfig": "*"
+    "dev-config": "*"
   }
 }
