--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "dev-tsconfig/nextjs.json",
+  "extends": "dev-config/ts-next.json",
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
