Added nohoist for @nestjs for fixing issue with ApolloDriver

--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "turborepo-basic-yarn",
   "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/@nestjs",
+      "**/@nestjs/**"
+    ]
+  },
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
