--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -53,7 +53,6 @@
     "ts-jest": "27.1.3",
     "ts-loader": "9.2.7",
     "ts-node": "10.6.0",
-    "tsconfig-paths": "3.13.0",
-    "typescript": "4.6.2"
+    "tsconfig-paths": "3.13.0"
   }
 }
