--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -23,7 +23,6 @@
     "dev-config": "*",
     "next-transpile-modules": "9.0.0",
     "postcss": "8.4.7",
-    "tailwindcss": "3.0.23",
-    "typescript": "4.6.2"
+    "tailwindcss": "3.0.23"
   }
 }
