--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,8 +17,7 @@
     "@types/node": "17.0.21",
     "dev-config": "*",
     "nodemon": "2.0.15",
-    "ts-node": "10.6.0",
-    "typescript": "4.6.2"
+    "ts-node": "10.6.0"
   },
   "dependencies": {
     "express": "4.17.3"
