--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,6 @@
     "autoprefixer": "10.4.2",
     "dev-config": "*",
     "postcss": "8.4.7",
-    "tailwindcss": "3.0.23",
-    "typescript": "4.6.2"
+    "tailwindcss": "3.0.23"
   }
 }
