--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,10 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "4.17.13",
-    "@types/node": "17.0.21",
     "dev-config": "*",
-    "nodemon": "2.0.15",
-    "ts-node": "10.6.0"
+    "nodemon": "2.0.15"
   },
   "dependencies": {
     "express": "4.17.3"
