--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
       "packages/*"
     ],
     "nohoist": [
-      "**/@nestjs",
-      "**/@nestjs/**"
+      "**/@nestjs/apollo"
     ]
   },
   "scripts": {
@@ -42,7 +41,7 @@
     "prettier-plugin-organize-imports": "2.3.4",
     "ts-jest": "27.1.3",
     "ts-loader": "9.2.7",
-    "ts-node": "10.6.0",
+    "ts-node": "10.7.0",
     "turbo": "1.1.5",
     "typescript": "4.6.2",
     "webpack": "5.70.0"
