--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ yarn-error.log*
 # turbo
 .turbo
 *.tsbuildinfo
+
+# yarn 2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
