--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "packages": [
       "apps/*",
       "packages/*"
-    ],
-    "nohoist": [
-      "**/@nestjs/apollo"
     ]
   },
   "scripts": {
@@ -57,5 +54,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@1.22.17"
+  "packageManager": "yarn@3.2.0",
+  "dependencies": {
+    "yarn": "^1.22.17"
+  }
 }
