--- a/packages/nest-problem-details/package.json
+++ b/packages/nest-problem-details/package.json
@@ -23,5 +23,9 @@
   "devDependencies": {
     "@nestjs/testing": "8.4.0",
     "dev-config": "*"
+  },
+  "peerDependencies": {
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.4"
   }
 }
