--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cuid": "2.1.8",
+    "express": "^4.17.3",
     "graphql": "16.3.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
@@ -47,10 +48,13 @@
     "@types/jest": "27.4.1",
     "@types/supertest": "2.0.11",
     "dev-config": "*",
+    "jest": "^27.5.1",
     "source-map-support": "0.5.21",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
     "ts-loader": "9.2.7",
-    "tsconfig-paths": "3.13.0"
+    "tsconfig-paths": "3.13.0",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0"
   }
 }
