--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
     "typescript": "4.6.2",
     "webpack": "5.70.0"
   },
+  "optionalDependencies": {
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "lint-staged": {
     "apps/**/*.{js,ts,jsx,tsx}": [
       "eslint --fix"
