--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -17,6 +17,11 @@
     "ui": "*"
   },
   "devDependencies": {
+    "@testing-library/dom": "8.11.3",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.3",
+    "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/user-event": "13.5.0",
     "@types/react": "17.0.39",
     "autoprefixer": "10.4.2",
     "dev-config": "*",
