--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -16,7 +16,6 @@
     "@mui/icons-material": "5.4.4",
     "@mui/material": "5.4.4",
     "@next-auth/mongodb-adapter": "1.0.1",
-    "@tailwindcss/line-clamp": "0.3.1",
     "express": "4.17.3",
     "framer-motion": "6.2.8",
     "lodash": "4.17.21",
@@ -30,8 +29,11 @@
     "timeago-react": "3.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.2",
-    "postcss": "8.4.7",
-    "tailwindcss": "3.0.23"
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "autoprefixer": "^10.4.2",
+    "dev-config": "*",
+    "next-transpile-modules": "^9.0.0",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
