--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install",
-    "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest"
+    "dependencies:upgrade": "yarn && yarn upgrade-interactive"
   },
   "devDependencies": {
     "@testing-library/dom": "8.11.3",
@@ -23,6 +23,7 @@
     "@testing-library/react": "12.1.3",
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.5.0",
+    "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/lodash": "4.14.179",
     "@types/node": "17.0.21",
