--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -19,6 +19,8 @@
     "class-validator": "0.13.2",
     "cls-hooked": "4.2.2",
     "config": "3.3.7",
+    "cuid": "2.1.8",
+    "express": "4.17.3",
     "lodash": "4.17.21",
     "nestjs-pino": "2.5.0",
     "pino-http": "6.6.0",
@@ -31,7 +33,10 @@
     "@types/config": "0.0.41",
     "@types/lodash": "4.14.179",
     "@types/response-time": "2.3.5",
-    "dev-config": "*"
+    "dev-config": "*",
+    "jest": "27.5.1",
+    "ts-jest": "27.1.3",
+    "typescript": "4.6.2"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.13",
