--- a/packages/nest-problem-details/package.json
+++ b/packages/nest-problem-details/package.json
@@ -17,6 +17,7 @@
     "@nestjs/core": "8.4.0",
     "@packages/essentials": "*",
     "class-validator": "0.13.2",
+    "express": "4.17.3",
     "lodash": "4.17.21",
     "type-fest": "2.12.0"
   },
