--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "turborepo-basic-yarn",
+  "name": "turborepo-basic-pnmp",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">=16",
+    "pnpm": ">=3"
+  },
   "workspaces": {
     "packages": [
       "apps/*",
@@ -14,8 +18,7 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install",
-    "dependencies:upgrade": "yarn && yarn upgrade-interactive"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@testing-library/dom": "8.11.3",
@@ -73,5 +76,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "pnpm@6.22.2"
 }
