--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -25,7 +25,8 @@
     "nestjs-pino": "2.5.0",
     "pino-http": "6.6.0",
     "response-time": "2.3.2",
-    "type-fest": "2.12.0"
+    "type-fest": "2.12.0",
+    "rxjs": "7.5.5"
   },
   "devDependencies": {
     "@nestjs/testing": "8.4.0",
