--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -48,7 +48,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/supertest": "2.0.11",
-    "dev-config": "*",
+    "shared-config": "^0.0.1",
     "jest": "^27.5.1",
     "source-map-support": "0.5.21",
     "supertest": "6.2.2",
