--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev --port 3000",
@@ -24,7 +24,7 @@
     "@testing-library/user-event": "13.5.0",
     "@types/react": "17.0.40",
     "autoprefixer": "10.4.2",
-    "dev-config": "*",
+    "shared-config": "^0.0.1",
     "next-transpile-modules": "9.0.0",
     "postcss": "8.4.8",
     "tailwindcss": "3.0.23"
