--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
     "autoprefixer": "^10.4.2",
-    "dev-config": "*",
+    "shared-config": "^0.0.1",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23"
