--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "4.17.13",
-    "dev-config": "*",
+    "shared-config": "^0.0.1",
     "nodemon": "2.0.15"
   },
   "dependencies": {
