--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "turborepo-basic-pnmp",
-  "version": "0.0.0",
+  "name": "turborepo-basic-npm",
+  "version": "0.0.1",
   "private": true,
   "engines": {
     "node": ">=16",
-    "pnpm": ">=3"
+    "npm": ">=8"
   },
-  "workspaces": {
-    "packages": [
-      "apps/*",
-      "packages/*"
-    ]
-  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
@@ -60,11 +58,6 @@
     "typescript": "4.6.2",
     "webpack": "5.70.0"
   },
-  "optionalDependencies": {
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
   "lint-staged": {
     "apps/**/*.{js,ts,jsx,tsx}": [
       "eslint --fix"
@@ -76,5 +69,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "pnpm@6.22.2"
+  "packageManager": "npm@8.5.4"
 }
