--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -34,7 +34,7 @@
     "@types/config": "0.0.41",
     "@types/lodash": "4.14.179",
     "@types/response-time": "2.3.5",
-    "dev-config": "*",
+    "shared-config": "^0.0.1",
     "jest": "27.5.1",
     "ts-jest": "27.1.3",
     "typescript": "4.6.2"
