--- a/packages/shared-config/package.json
+++ b/packages/shared-config/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "dev-config",
-  "version": "0.0.0",
+  "name": "shared-config",
+  "description": "",
   "main": "index.js",
+  "version": "0.0.1",
   "license": "MIT",
   "private": true,
   "files": [
