--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "./index.tsx",
   "types": "./index.tsx",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "@types/react": "17.0.40",
     "@types/react-dom": "17.0.13",
     "autoprefixer": "10.4.2",
-    "dev-config": "*",
+    "shared-config": "^0.0.1",
     "postcss": "8.4.8",
     "tailwindcss": "3.0.23"
   }
