--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -28,7 +28,7 @@
     "@nestjs/graphql": "10.0.6",
     "@nestjs/platform-express": "8.4.0",
     "@nestjs/serve-static": "2.2.2",
-    "@packages/nest-problem-details": "*",
+    "@packages/nest-problem-details": "^0.0.1",
     "apollo-server": "3.6.4",
     "apollo-server-express": "3.6.4",
     "class-transformer": "0.5.1",
@@ -48,8 +48,8 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/supertest": "2.0.11",
-    "shared-config": "^0.0.1",
     "jest": "^27.5.1",
+    "shared-config": "^0.0.1",
     "source-map-support": "0.5.21",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
