--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -13,8 +13,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "server": "*",
-    "ui": "*"
+    "server": "^1.0.0",
+    "ui": "^0.0.1"
   },
   "devDependencies": {
     "@testing-library/dom": "8.11.3",
@@ -24,9 +24,9 @@
     "@testing-library/user-event": "13.5.0",
     "@types/react": "17.0.40",
     "autoprefixer": "10.4.2",
-    "shared-config": "^0.0.1",
     "next-transpile-modules": "9.0.0",
     "postcss": "8.4.8",
+    "shared-config": "^0.0.1",
     "tailwindcss": "3.0.23"
   }
 }
