--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,8 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "4.17.13",
-    "shared-config": "^0.0.1",
-    "nodemon": "2.0.15"
+    "nodemon": "2.0.15",
+    "shared-config": "^0.0.1"
   },
   "dependencies": {
     "express": "4.17.3"
