--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@nestjs/common": "8.4.0",
     "@nestjs/core": "8.4.0",
-    "@packages/essentials": "*",
+    "@packages/essentials": "^0.0.1",
     "class-validator": "0.13.2",
     "cls-hooked": "4.2.2",
     "config": "3.3.7",
@@ -25,8 +25,8 @@
     "nestjs-pino": "2.5.0",
     "pino-http": "6.6.0",
     "response-time": "2.3.2",
-    "type-fest": "2.12.0",
-    "rxjs": "7.5.5"
+    "rxjs": "^7.5.4",
+    "type-fest": "2.12.0"
   },
   "devDependencies": {
     "@nestjs/testing": "8.4.0",
@@ -34,8 +34,8 @@
     "@types/config": "0.0.41",
     "@types/lodash": "4.14.179",
     "@types/response-time": "2.3.5",
-    "shared-config": "^0.0.1",
     "jest": "27.5.1",
+    "shared-config": "^0.0.1",
     "ts-jest": "27.1.3",
     "typescript": "4.6.2"
   },
