--- a/packages/nest-problem-details/package.json
+++ b/packages/nest-problem-details/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@nestjs/common": "8.4.0",
     "@nestjs/core": "8.4.0",
-    "@packages/essentials": "*",
+    "@packages/essentials": "^0.0.1",
     "class-validator": "0.13.2",
     "express": "4.17.3",
     "lodash": "4.17.21",
