--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -10,23 +10,23 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "server": "^1.0.37",
     "ui": "^0.0.1"
   },
   "devDependencies": {
-    "@testing-library/dom": "8.11.3",
-    "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "12.1.4",
-    "@testing-library/react-hooks": "7.0.2",
-    "@testing-library/user-event": "13.5.0",
-    "@types/react": "17.0.40",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^17.0.41",
     "autoprefixer": "^10.4.4",
-    "next-transpile-modules": "9.0.0",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.12",
     "shared-config": "^0.0.1",
-    "tailwindcss": "3.0.23"
+    "tailwindcss": "^3.0.23"
   }
 }
