--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -49,7 +49,7 @@
     "@types/jest": "27.4.1",
     "@types/supertest": "2.0.12",
     "jest": "^27.5.1",
-    "shared-config": "*",
+    "@nodesoft/shared-config": "*",
     "source-map-support": "0.5.21",
     "supertest": "6.2.2",
     "ts-jest": "27.1.4",
