--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/express": "4.17.13",
     "nodemon": "2.0.15",
-    "shared-config": "*"
+    "@nodesoft/shared-config": "*"
   },
   "dependencies": {
     "express": "4.17.3"
