--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "shared-config/ts-server.json",
+  "extends": "@nodesoft/shared-config/ts-server.json",
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./"
