--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -35,7 +35,7 @@
     "@types/lodash": "^4.14.180",
     "@types/response-time": "^2.3.5",
     "jest": "^27.5.1",
-    "shared-config": "*",
+    "@nodesoft/shared-config": "*",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   }
