--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "17.0.14",
     "autoprefixer": "10.4.4",
     "postcss": "8.4.12",
-    "shared-config": "*",
+    "@nodesoft/shared-config": "*",
     "tailwindcss": "3.0.23"
   }
 }
