--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,15 +7,16 @@
     "dev": "rm -rf dist && npm run build && nodemon ./dist/src/index.js",
     "build": "tsc",
     "test": "jest --coverage",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nodesoft/shared-config": "^0.0.1",
     "@types/express": "4.17.13",
-    "nodemon": "2.0.15",
-    "@nodesoft/shared-config": "*"
+    "nodemon": "2.0.15"
   },
   "dependencies": {
     "express": "4.17.3"
