--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "thunder-client.loadFromProject": true,
-  "thunder-client.workspaceRelativePath": "./.vscode/thunderclient"
+  "thunder-client.workspaceRelativePath": "./.vscode/thunderclient",
+  "thunder-client.saveToWorkspace": true
 }
