--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -22,11 +22,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/apollo": "10.0.8",
-    "@nestjs/common": "8.4.3",
-    "@nestjs/core": "8.4.3",
-    "@nestjs/graphql": "10.0.8",
-    "@nestjs/platform-express": "8.4.3",
+    "@nestjs/apollo": "10.0.9",
+    "@nestjs/common": "8.4.4",
+    "@nestjs/core": "8.4.4",
+    "@nestjs/graphql": "10.0.9",
+    "@nestjs/platform-express": "8.4.4",
     "@nestjs/serve-static": "2.2.2",
     "@packages/nest-problem-details": "^0.0.1",
     "apollo-server": "3.6.7",
@@ -42,20 +42,20 @@
     "rxjs": "7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "8.2.4",
-    "@nestjs/schematics": "8.0.9",
-    "@nestjs/testing": "8.4.3",
+    "@nestjs/cli": "8.2.5",
+    "@nestjs/schematics": "8.0.10",
+    "@nestjs/testing": "8.4.4",
+    "@nodesoft/shared-config": "^0.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/supertest": "2.0.12",
     "jest": "^27.5.1",
-    "@nodesoft/shared-config": "*",
     "source-map-support": "0.5.21",
     "supertest": "6.2.2",
     "ts-jest": "27.1.4",
     "ts-loader": "9.2.8",
     "tsconfig-paths": "3.14.1",
-    "typescript": "^4.6.2",
-    "webpack": "^5.70.0"
+    "typescript": "4.6.3",
+    "webpack": "5.72.0"
   }
 }
