--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -7,27 +7,31 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --coverage",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
     "@fontsource/roboto": "4.5.5",
-    "next": "12.1.4",
+    "@mui/icons-material": "5.6.2",
+    "@mui/material": "5.6.2",
+    "@nodesoft/ui": "^0.0.1",
+    "@react-google-maps/api": "2.8.1",
+    "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "server": "1.0.37",
-    "@nodesoft/ui": "*"
+    "server": "1.0.37"
   },
   "devDependencies": {
-    "@nodesoft/shared-config": "*",
-    "@testing-library/dom": "8.12.0",
-    "@testing-library/jest-dom": "5.16.3",
-    "@testing-library/react": "13.0.0",
-    "@testing-library/react-hooks": "7.0.2",
-    "@testing-library/user-event": "14.0.4",
-    "@types/react": "17.0.43",
+    "@nodesoft/shared-config": "^0.0.1",
+    "@testing-library/dom": "8.13.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.1.1",
+    "@types/react": "18.0.5",
     "autoprefixer": "10.4.4",
     "next-transpile-modules": "9.0.0",
     "postcss": "8.4.12",
-    "tailwindcss": "3.0.23"
+    "tailwindcss": "3.0.24"
   }
 }
