--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -7,33 +7,34 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --coverage --passWithNoTests"
+    "test": "jest --coverage --passWithNoTests",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
-    "@emotion/react": "11.8.2",
+    "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
     "@heroicons/react": "1.0.6",
-    "@mui/icons-material": "5.5.1",
-    "@mui/material": "5.5.3",
+    "@mui/icons-material": "5.6.2",
+    "@mui/material": "5.6.2",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "express": "4.17.3",
-    "framer-motion": "6.2.8",
+    "framer-motion": "6.3.0",
     "lodash": "4.17.21",
-    "mongodb": "4.4.1",
-    "next": "12.1.4",
-    "next-auth": "^4.3.1",
+    "mongodb": "4.5.0",
+    "next": "12.1.5",
+    "next-auth": "^4.3.2",
     "next-themes": "0.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "recoil": "0.7.0",
+    "recoil": "0.7.2",
     "timeago-react": "3.0.4"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "autoprefixer": "^10.4.4",
-    "next-transpile-modules": "^9.0.0",
-    "postcss": "^8.4.12",
-    "@nodesoft/shared-config": "*",
-    "tailwindcss": "^3.0.23"
+    "@nodesoft/shared-config": "^0.0.1",
+    "@tailwindcss/line-clamp": "0.3.1",
+    "autoprefixer": "10.4.4",
+    "next-transpile-modules": "9.0.0",
+    "postcss": "8.4.12",
+    "tailwindcss": "3.0.24"
   }
 }
