--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=16",
-    "npm": ">=8"
+    "pnpm": ">=7"
   },
   "workspaces": [
     "apps/*",
@@ -18,37 +18,37 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install",
-    "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest && rm yarn.lock && npm install"
+    "dependencies:upgrade": "yarn && yarn upgrade-interactive --latest && rm yarn.lock && npm install --force"
   },
   "devDependencies": {
-    "@testing-library/dom": "8.12.0",
-    "@testing-library/jest-dom": "5.16.3",
-    "@testing-library/react": "13.0.0",
-    "@testing-library/react-hooks": "7.0.2",
-    "@testing-library/user-event": "14.0.4",
+    "@testing-library/dom": "8.13.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/lodash": "4.14.181",
-    "@types/node": "17.0.23",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "esbuild": "0.14.30",
+    "@types/node": "17.0.24",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "esbuild": "0.14.36",
     "esbuild-jest": "0.5.0",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.5.0",
     "eslint-import-resolver-typescript": "2.7.1",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jest": "26.1.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "26.1.4",
     "eslint-plugin-jest-dom": "4.0.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-testing-library": "5.2.0",
+    "eslint-plugin-testing-library": "5.3.1",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
     "jest-watch-typeahead": "1.0.0",
-    "lint-staged": "12.3.7",
+    "lint-staged": "12.3.8",
     "msw": "0.39.2",
     "prettier": "2.6.2",
     "prettier-plugin-organize-imports": "2.3.4",
@@ -56,14 +56,9 @@
     "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
     "tsconfig-paths": "3.14.1",
-    "turbo": "1.1.10",
+    "turbo": "1.2.4",
     "typescript": "4.6.3",
-    "webpack": "5.71.0"
-  },
-  "overrides": {
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "@testing-library/react": "13.0.0"
+    "webpack": "5.72.0"
   },
   "lint-staged": {
     "apps/**/*.{js,ts,jsx,tsx}": [
@@ -75,6 +70,10 @@
     "*.json": [
       "prettier --write"
     ]
+  },
+  "overrides": {
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1"
   },
   "packageManager": "npm@8.5.4"
 }
