--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -22,7 +22,7 @@
     "cuid": "^2.1.8",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
-    "nestjs-pino": "^2.5.0",
+    "nestjs-pino": "^2.5.2",
     "pino-http": "^6.6.0",
     "response-time": "^2.3.2",
     "rxjs": "^7.5.4",
@@ -30,12 +30,12 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^8.4.1",
+    "@nodesoft/shared-config": "^0.0.1",
     "@types/cls-hooked": "^4.3.3",
     "@types/config": "^0.0.41",
     "@types/lodash": "^4.14.180",
     "@types/response-time": "^2.3.5",
     "jest": "^27.5.1",
-    "@nodesoft/shared-config": "*",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   }
