--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,11 +9,11 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@nodesoft/shared-config": "^0.0.1",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
     "autoprefixer": "10.4.4",
     "postcss": "8.4.12",
-    "@nodesoft/shared-config": "*",
-    "tailwindcss": "3.0.23"
+    "tailwindcss": "3.0.24"
   }
 }
