--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -21,7 +21,8 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "server": "1.0.37"
+    "server": "1.0.37",
+    "@babel/core": "^7.0.0"
   },
   "devDependencies": {
     "@nodesoft/shared-config": "^0.0.1",
