--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "10.4.5",
     "next-transpile-modules": "9.0.0",
     "postcss": "8.4.13",
-    "tailwindcss": "3.0.24"
+    "tailwindcss": "3.0.24",
+    "@babel/core": "^7.0.0"
   }
 }
