--- a/packages/nest-essentials/package.json
+++ b/packages/nest-essentials/package.json
@@ -13,30 +13,31 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.1",
-    "@nestjs/core": "^8.4.1",
-    "@packages/essentials": "^0.0.1",
-    "class-validator": "^0.13.2",
-    "cls-hooked": "^4.2.2",
-    "config": "^3.3.7",
-    "cuid": "^2.1.8",
-    "express": "^4.17.3",
-    "lodash": "^4.17.21",
-    "nestjs-pino": "^2.5.2",
-    "pino-http": "^7.0.0",
-    "response-time": "^2.3.2",
-    "rxjs": "^7.5.4",
-    "type-fest": "^2.12.0"
+    "@nestjs/common": "8.4.1",
+    "@nestjs/core": "8.4.1",
+    "@packages/essentials": "0.0.1",
+    "class-validator": "0.13.2",
+    "cls-hooked": "4.2.2",
+    "config": "3.3.7",
+    "cuid": "2.1.8",
+    "express": "4.17.3",
+    "lodash": "4.17.21",
+    "nestjs-pino": "2.5.2",
+    "pino-http": "6.6.0",
+    "response-time": "2.3.2",
+    "rxjs": "7.5.4",
+    "type-fest": "2.12.0",
+    "reflect-metadata": "0.1.12"
   },
   "devDependencies": {
-    "@nestjs/testing": "^8.4.1",
-    "@nodesoft/shared-config": "^0.0.1",
-    "@types/cls-hooked": "^4.3.3",
-    "@types/config": "^0.0.41",
-    "@types/lodash": "^4.14.180",
-    "@types/response-time": "^2.3.5",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.6.2"
+    "@nestjs/testing": "8.4.1",
+    "@nodesoft/shared-config": "*",
+    "@types/cls-hooked": "4.3.3",
+    "@types/config": "0.0.41",
+    "@types/lodash": "4.14.180",
+    "@types/response-time": "2.3.5",
+    "jest": "27.5.1",
+    "ts-jest": "27.1.3",
+    "typescript": "4.6.2"
   }
 }
