--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -34,7 +34,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cuid": "2.1.8",
-    "express": "^4.17.3",
+    "express": "4.18.1",
     "graphql": "16.4.0",
     "lodash": "4.17.21",
     "reflect-metadata": "0.1.13",
