--- a/apps/next-antd-tailwindcss/package.json
+++ b/apps/next-antd-tailwindcss/package.json
@@ -8,18 +8,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.7.0",
-    "@next/bundle-analyzer": "^12.1.5",
+    "@next/bundle-analyzer": "12.1.5",
     "antd": "4.20.2",
-    "autoprefixer": "^10.2.4",
-    "cross-env": "^7.0.2",
+    "autoprefixer": "10.2.4",
+    "cross-env": "7.0.2",
     "dayjs": "1.11.1",
-    "esm": "^3.2.25",
-    "next": "^12.1.5",
-    "postcss": "^8.2.6",
-    "postcss-preset-env": "^7.4.4",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "tailwindcss": "^3.0.24"
+    "esm": "3.2.25",
+    "next": "12.1.5",
+    "postcss": "8.2.6",
+    "postcss-preset-env": "7.4.4",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "tailwindcss": "3.0.24"
   },
   "browser": {
     "fs": false,
@@ -27,9 +27,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^17.0.30",
-    "@types/react": "^18.0.8",
+    "@types/node": "17.0.30",
+    "@types/react": "18.0.8",
     "prettier": "2.6.2",
-    "typescript": "^4.1.5"
+    "typescript": "4.1.5"
   }
 }
