--- a/apps/next-linkedin-clone/package.json
+++ b/apps/next-linkedin-clone/package.json
@@ -16,13 +16,13 @@
     "@heroicons/react": "1.0.6",
     "@mui/icons-material": "5.6.2",
     "@mui/material": "5.6.3",
-    "@next-auth/mongodb-adapter": "^1.0.3",
+    "@next-auth/mongodb-adapter": "1.0.3",
     "express": "4.18.1",
     "framer-motion": "6.3.3",
     "lodash": "4.17.21",
     "mongodb": "4.5.0",
     "next": "12.1.5",
-    "next-auth": "^4.3.2",
+    "next-auth": "4.3.2",
     "next-themes": "0.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -30,12 +30,12 @@
     "timeago-react": "3.0.4"
   },
   "devDependencies": {
-    "@nodesoft/shared-config": "^0.0.1",
+    "@nodesoft/shared-config": "*",
     "@tailwindcss/line-clamp": "0.4.0",
     "autoprefixer": "10.4.5",
     "next-transpile-modules": "9.0.0",
     "postcss": "8.4.13",
     "tailwindcss": "3.0.24",
-    "@babel/core": "^7.0.0"
+    "@babel/core": "7.0.0"
   }
 }
