--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nodesoft/shared-config": "^0.0.1",
+    "@nodesoft/shared-config": "*",
     "@types/express": "4.17.13",
     "nodemon": "2.0.16"
   },
