--- a/packages/essentials/package.json
+++ b/packages/essentials/package.json
@@ -13,9 +13,9 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
-    "type-fest": "^2.12.0"
+    "type-fest": "2.12.0"
   },
   "devDependencies": {
-    "@nodesoft/shared-config": "^0.0.1"
+    "@nodesoft/shared-config": "*"
   }
 }
