--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -25,7 +25,7 @@
     "@nestjs/apollo": "10.0.19",
     "@nestjs/common": "8.4.7",
     "@nestjs/core": "8.4.7",
-    "@nestjs/graphql": "10.0.20",
+    "@nestjs/graphql": "10.0.21",
     "@nestjs/platform-express": "8.4.7",
     "@nestjs/serve-static": "2.2.2",
     "@packages/nest-problem-details": "^0.0.1",
@@ -42,10 +42,10 @@
     "rxjs": "7.5.6"
   },
   "devDependencies": {
+    "@dk-nodesoft/shared-config": "workspace:^",
     "@nestjs/cli": "8.2.8",
     "@nestjs/schematics": "8.0.11",
     "@nestjs/testing": "8.4.7",
-    "@nodesoft/shared-config": "^0.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.6",
     "@types/supertest": "2.0.12",
@@ -56,6 +56,6 @@
     "ts-loader": "9.3.1",
     "tsconfig-paths": "4.0.0",
     "typescript": "4.7.4",
-    "webpack": "5.73.0"
+    "webpack": "5.74.0"
   }
 }
