--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@your-org/eslint-config-bases",
+  "name": "@dk-nodesoft/eslint-config",
   "version": "1.5.0",
   "license": "MIT",
   "private": true,
-  "homepage": "https://github.com/belgattitude/nextjs-monorepo-example",
+  "homepage": "https://github.com/sorensenNiels/turborepo-tutorial",
   "repository": {
     "type": "git",
-    "url": "https://github.com/belgattitude/nextjs-monorepo-example",
-    "directory": "packages/eslint-config-bases"
+    "url": "https://github.com/sorensenNiels/turborepo-tutorial",
+    "directory": "packages/eslint-config"
   },
   "author": {
-    "name": "Vanvelthem Sébastien",
-    "url": "https://github.com/belgattitude"
+    "name": "Niels P. Sørensen",
+    "url": "https://github.com/sorensenNiels"
   },
   "type": "commonjs",
   "main": "./index.js",
@@ -79,7 +79,7 @@
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-playwright": "^0.9.0",
+    "eslint-plugin-playwright": "^0.10.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -112,7 +112,7 @@
   },
   "devDependencies": {
     "@types/jest": "28.1.6",
-    "@types/node": "18.0.6",
+    "@types/node": "18.6.1",
     "@types/prettier": "2.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
