--- a/packages/nest-problem-details/package.json
+++ b/packages/nest-problem-details/package.json
@@ -24,7 +24,7 @@
     "type-fest": "2.17.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "8.4.7",
-    "@nodesoft/shared-config": "*"
+    "@dk-nodesoft/shared-config": "workspace:^",
+    "@nestjs/testing": "8.4.7"
   }
 }
